# fdl-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: api-mapping.md  runbook.md  security.md
src/fdl_mcp/: __init__.py  audit.py  auth.py  client.py  config.py  endpoint_resolver.py  errors.py  idempotency.py  policy.py  redaction.py  server.py  services.py
tests/: test_auth.py  test_client.py  test_endpoint_resolver.py  test_redaction.py
